# faiquery

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example_data/: example.fa  example.fa.fai
src/: fasta_index.rs  index_entry.rs  indexed_fasta.rs  lib.rs
