[package]
name = "faiquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.2.2"
hashbrown = "0.14.0"
memmap2 = "0.7.1"
serde = { version = "1.0.185", features = ["derive"] }
