[package]
name = "faiquery"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/noamteyssier/faiquery"
documentation = "https://docs.rs/faiquery"
keywords = ["fasta", "fai", "indexed"]
categories = ["parser-implementations"]
license = "MIT"
description = "Queryable indexed fasta using a mmapped file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.2.2"
hashbrown = "0.14.0"
memmap2 = "0.7.1"
serde = { version = "1.0.185", features = ["derive"] }
